--- a/me.html
+++ b/me.html
@@ -5,12 +5,12 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-* {
-  box-sizing: border-box;
-}
+
 
 body {
-    background-color:white;
+    background-color: #0049B7
+
+
 
 }
 
@@ -19,9 +19,9 @@ body {
   padding-right: 20px;
   padding-bottom: 10px;
   padding-left: 20px;
-  color: black;
+  color: white;
   font-family: "Lucida Console", Courier, monospace; 
-  font-size: 17px;
+  font-size: 20px;
 
 }
 
@@ -46,12 +46,12 @@ a { text-decoration: none; }
 }
 
 .fa-instagram {
-  background: #125688;
+
   color: white;
 }
 
 .fa-linkedin {
-  background: #007bb5;
+
   color: white;
 }
 
@@ -60,7 +60,7 @@ a { text-decoration: none; }
 <body>
 
 <div class="corn">
-   <div class= "w3-display-topmiddle"><h2>me :)</h2></div>
+   <div class= "w3-display-topmiddle"><img src="send.png"></div>
    
    <div class="w3-display-topleft"><a href = "index.html" >Home</a></div>
 
@@ -73,8 +73,7 @@ a { text-decoration: none; }
   </div>
 
   <div class="w3-display-middle">
-    <a href="https://www.instagram.com/courageouschris/?hl=en"target="_blank" class="fa fa-instagram"></a>
-    <br>
+    <a href="https://www.instagram.com/courageouschris/?hl=en" target="_blank" class="fa fa-instagram"></a>
     <a href="https://www.linkedin.com/in/christopher-reid-357004144/" target="_blank" class="fa fa-linkedin"></a>
   </div>
 
