--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ body {
   color: rgb(255, 255, 255);
   font-family: "Lucida Console", Courier, monospace; 
   font-size: 20px;
+  padding: 10px;
 
 }
 
@@ -38,8 +39,8 @@ a {
 }
 
 /* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .text {font-size: 11px}
+@media only screen and (max-width: 400px) {
+  .text {font-size: 10px}
 }
 .aligncenter {
 	text-align: center;
@@ -56,11 +57,9 @@ a {
 
   <div class="w3-display-bottomright"><a href = "RESwebpage.html">Resume</a></div>
 
-  <div class="w3-display-bottommiddle"><a href = "me.html" target ="_blank">by Christopher Reid</a></div>
-
   <div class="w3-display-middle	">
   <div class="myVideo">  
-      <img src="vectormr.PNG" style="width: 100%">
+    <a href = "me.html" target ="_blank"><img src="vectormr.PNG" style="width: 100%"></a>
   </div>
   </div>
 
