--- a/RESwebpage.html
+++ b/RESwebpage.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
@@ -128,22 +129,17 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p>Hey! I am 19 and am currently studying Computer Science at The University Of Surrey. I've got knowledge in many areas of the field but am yet to choose a paticular area to specialise in. I'm hoping to find this as I continue to learn the course.
     </p>
     <h3 class="w3-padding-16 w3-text-light-grey">Programming Language Skills</h3>
-    <p class="w3-wide">Java</p>
-    <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:70%"></div>
-    </div>
-    <p class="w3-wide">Python</p>
-    <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:65%"></div>
-    </div>
-    <p class="w3-wide">Web Design</p>
-    <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:70%"></div>
-    </div>
-	<p class="w3-wide">SQL</p>
-    <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:50%"></div>
-    </div><br>
+     <!-- Photo grid -->
+  <div class="w3-row">
+    <div class="w3-third" style="font-size:50px">
+      <i class="devicon-java-plain-wordmark colored"></i>
+      <i class="devicon-python-plain-wordmark colored"></i>
+      <i class="devicon-mysql-plain-wordmark colored"></i>
+      <i class="devicon-html5-plain-wordmark colored"></i>
+      <i class="devicon-css3-plain-wordmark colored"></i>
+      </div>
+      
+</div>
 	
 	<div class="w3-content w3-justify w3-text-grey w3-padding-64" id="resume">
     <h2 class="w3-text-light-grey">Experience</h2>
